@@ -19,6 +19,7 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Properties;
 
 @Configuration
@@ -40,19 +41,21 @@ public class BeansConfig {
         return configuration.getAuthenticationManager();
     }
 
-    @Bean
-    public JavaMailSender mailSender() {
-        JavaMailSenderImpl mailSender = new JavaMailSenderImpl();
-        mailSender.setHost("localhost");
-        mailSender.setPort(1025);
-
-        Properties props = mailSender.getJavaMailProperties();
-        props.put("mail.transport.protocol", "smtp");
-        props.put("mail.smtp.auth", "false"); // Ustaw na true, jeśli MailDev wymaga uwierzytelnienia
-        props.put("mail.smtp.starttls.enable", "false"); // Ustaw na true, jeśli wymagane jest STARTTLS
-
-        return mailSender;
-    }
+//    @Bean
+//    public JavaMailSender mailSender() {
+//        JavaMailSenderImpl mailSender = new JavaMailSenderImpl();
+//        mailSender.setHost("smtp.gmail.com");
+//        mailSender.setPort(465);
+//
+//        Properties props = mailSender.getJavaMailProperties();
+//        props.put("mail.transport.protocol", "smtp");
+//        props.put("mail.smtp.auth", "true");
+//        props.put("mail.smtp.auth.ssl.enable", "true");
+//        props.put("mail.smtp.auth.ssl.trust", "*");
+//        props.put("mail.starttls.enable", "true");
+//
+//        return mailSender;
+//    }
 
     @Bean
     public  PasswordEncoder passwordEncoder() {
@@ -64,7 +67,7 @@ public class BeansConfig {
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         final CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:8080"));
         config.setAllowedHeaders(Arrays.asList(
                 HttpHeaders.ORIGIN,
                 HttpHeaders.CONTENT_TYPE,
